Switch base package from dxc to com

--- a/bootloader/src/main/resources/META-INF/resources/index.html
+++ b/bootloader/src/main/resources/META-INF/resources/index.html
@@ -263,7 +263,7 @@
                 <div class="appdetails">
                     <h5>Application</h5>
                     <ul>
-                        <li>GroupId: <code>dxc.microservice.quarkus</code></li>
+                        <li>GroupId: <code>com.microservice.quarkus</code></li>
                         <li>ArtifactId: <code>quarkus-hexagonal</code></li>
                         <li>Version: <code>0.0.1-SNAPSHOT</code></li>
                         <li>Quarkus Version: <code>2.14.0.Final</code></li>
